--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <article class="tile is-child box">
               <p class="title is-4">Proyectos</p>
               <div class="content">
-                  <p>Solo he tenido la oportunidad de participar en proyectos de las diferentes materias de la universidad, desde Fundamentos de Programación, pasando por Programación Interactiva, hasta Inteligencia Artificial y Desarrollo de Software.</p>
+                  <p>He tenido la oportunidad de participar en proyectos de las diferentes materias de la universidad, desde Fundamentos de Programación, pasando por Programación Interactiva, hasta Inteligencia Artificial y Desarrollo de Software. Todos llevados a cabo de la mejor forma y utilizando lenguajes como Java, Python, y frameworks como Django-REST</p>
               </div>
           </article>
         </div>
